# kitsu-publisher-next

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  README.md  electron-builder.config.js  electron-vendors.config.json  package-lock.json  package.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
app/renderer/: .eslintrc.json  vite.config.js
blender/: setup.cfg  test.py
blender/dccutils_server/: __init__.py  run_server.py
buildResources/: icon.icns
connectors/: requirements_python_connector.txt
connectors/blender/: auto-enable.py  install.ps1  install.sh  kitsu-publisher.py  setup.cfg  setup.py
connectors/blender/dccutils_server/: __init__.py  api.py  run_server.py  server.py
connectors/harmony/: install.ps1  test.js
connectors/unreal/: install.ps1
electron/: config-electron.js  main.js
harmony/: harmonyServer.js  test.js
harmony/HTTP/: exceptions.js  server.js
scripts/: build.js  update-electron-vendors.js  watch.js  zip_connectors.js
src/: App.vue  main.js
src/components/: Home.vue  Login.vue  Main.vue  ServerDown.vue  Todos.vue
src/lib/: auth.js  clipboard.js  color2.js  colors.js  config-electron.js  crisp.js  csv.js  descriptors.js  errors.js  files.js  filtering.js  func.js  i18n.js  indexing.js  init.js  lang.js  models.js  path.js  playlist.js  preferences.js  productions.js  query.js  render.js  selection.js  sorting.js  stats.js  string.js  time.js  timezone.js  video.js
src/locales/: de.js  en.js  fa.js  index.js  nl.json  pt.json  ru.js  zh_tw.json
tests/: app.spec.js
(+281 files in other folders)
