[metadata]
name = dccutils_server
description = dccutils_server is a fastAPI server for DCCs based on dccutils.
long_description = file: README.rst
keywords = fastapi, dcc, cg, production
license = GNU Library or Lesser General Public License (LGPL)
license_file = LICENSE
author = CG Wire
author_email = evan@cg-wire.com
url = https://gazu.cg-wire.com/
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
packages = find:
install_requires =
    fastapi
    uvicorn
    dccutils @ git+https://github.com/EvanBldy/dccutils.git

[options.packages.find]
include = dccutils_server*

[options.extras_require]
dev =
    wheel
